--- a/TestingLast/Properties/Resources.resx
+++ b/TestingLast/Properties/Resources.resx
@@ -187,4 +187,7 @@
   <data name="_while" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\while.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="cscode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cscode.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1256</value>
+  </data>
 </root>
